<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamForce</string>
    <string name="title_activity_browser">Downloads</string>
    <string name="title_activity_about">About</string>

    <string name="txtBienvenida">Wellcome to Team Force Android App</string>
    <string name="msgGenericError">Generic Error</string>
    <string name="enviarEmailBtn">Send email</string>
    <string name="msgSubjectInfo">Information TeamForce</string>
    <string name="visitarWebBtn">Visit Web</string>
    <string name="msgConfiguracion">Configuration</string>
    <string name="notificacionChk">Show notifications</string>
    <string name="msgTerminadaDescarga">Download finished</string>
    <string name="updateMnu">Search updates</string>
    <string name="aboutMnu">About us</string>
    <string name="configMnu">Configuration</string>
    <string name="exitMnu">Exit</string>
    <string name="cancelarBtn">Cancel</string>
    <string name="aceptarBtn">Accept</string>
    <string name="msgLastVersion">You already have the latest version</string>
    <string name="msgComprobarVersion">New app update</string>
    <string name="msgPreguntaVersion">,Download?</string>
    <string name="msgIniciandoDescarga">Download start</string>
    <string name="btnSalir">Exit</string>
    <string name="btnDescargas">Downloads</string>
    <string name="foroBtn">Forum</string>
    <string name="btnAbout">About us</string>
    <string name="btnConfiguracion">Configuration</string>
    <string name="title_activity_config">Configuration</string>
    <string name="noInternet">No internet connection, some options will be disabled,you need to restart the app after enable Data or Wifi to enable the disabled options</string>
    <string name="txtAboutUs">Jiayu Team Force,We are a group of owners who have joined Jiayus to do everything we can to create and improve roms for our dear Jiayu</string>
    <string-array name="languages">
        <item>"Change Language"</item>
        <item>"English"</item>
        <item>"Español"</item>
        <!--<item>"Catala"</item>
        <item>"Français"</item>
        <item>"Italiano"</item>
        <item>"日本语"</item>
        <item>"Portugues"</item>
        <item>"Deutsch"</item>
        <item>"русский"</item>
        <item>"中国 语言"</item>-->
    </string-array>
    <string-array name="languages_values">
        <item/>
        <item>"en"</item>
        <item>"es"</item>
        <!--<item>"ca"</item>
        <item>"fr"</item>
        <item>"it"</item>
        <item>"ja"</item>
        <item>"pt"</item>
        <item>"de"</item>
        <item>"ru"</item>
        <item>"zh"</item>-->
    </string-array>
    <string name="urlWeb">http://www.tfandroid.es</string>
    <string name="urlFacebook">https://www.facebook.com/TeamForceGroup</string>
    <string name="urlGoogle">https://plus.google.com/u/0/101598355663549822553/posts</string>
    <string name="urlRss">http://tfandroid.es/feed/</string>
    <string name="urlTwitter">https://twitter.com/TeamForceGroup</string>
    <string name="urlYoutube">http://www.youtube.com/user/TeamForceGroup</string>
</resources>
